Keep every list's default and cap in one Limits in api with one clamp
The handlers, the MCP tools and the CLI read the same table, and mcp no longer imports cli.
The CLI's 20 traces is CLI_TRACES beside the handler's 50; the default window is Selectors.DEFAULT_SINCE.
ReadOnlyQuery keeps its own clamp against its own maximum, because store does not depend on api.

Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>